--- a/index.html
+++ b/index.html
@@ -207,13 +207,10 @@
         align-self: flex-start;
         /* 顶部对齐 */
         width: 40%;
-        /* 添加宽度控制，让图片更大 */
     }
 
-    /* 图片样式调整 - 修复这里！ */
     .section-img {
         width:90%;
-        /* 改为 width: 100% 而不是 max-width: 10% */
         height: auto;
         display: block;   
         transform: rotate(0deg);
@@ -434,7 +431,7 @@
         </ul>
 
         <!-- 中间品牌logo -->
-        <a href="#" class="navbar-logo">NewThread</a>
+        <a href="https://www.new-thread.com/" class="navbar-logo">NewThread</a>
 
         <!-- 右侧菜单（保持不变） -->
         <ul class="nav-menu-right" id="navMenuRight">
@@ -705,4 +702,5 @@
     });
 </script>
 </body>
+
 </html>
