--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
         <ul class="nav-menu-left" id="navMenuLeft">
             <li class="nav-item dropdown">
                 <!-- 下拉菜单触发按钮 -->
-                <a href="#introduction" class="nav-link active dropdown-toggle">
+                <a href="#introduction" class="nav-link dropdown-toggle">
                     Introduction
                     <span class="dropdown-icon">▼</span> <!-- 下拉图标 -->
                 </a>
@@ -704,3 +704,4 @@
 </body>
 
 </html>
+
