--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
     <section id="questions" class="section">
     <div class="section-two"style="background-image: url('https://raw.githubusercontent.com/sanxiaojijiaben404/picture/main/background_QA.png');"
         background-size: 100% auto； background-repeat: no-repeat;background-attachment: scroll;>
-        <h1 style="margin: 0 auto">More Questiobs</h1>
+        <h1 style="margin: 0 auto">More Questions</h1>
         <div class="faq-item">
             <!-- 问题1 -->
             <div class="question-item faq-item">
@@ -819,4 +819,5 @@
     });
 </script>
 </body>
+
 </html>
